# dk_utils

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README  dk_utils-config.cmake
cmake/: ToolsGtest.txt
cmake/modules/: FindGBM.cmake  FindGLESv2.cmake  FindGLM.cmake  FindGTest.cmake  FindKMS.cmake  FindOpenGLES2.cmake  FindPVR2D.cmake  FindUDEV.cmake
cmake/tools/: gtest_tools.cmake
ext/gtest/: CMakeLists.txt
scripts/: install.sh  pre-commit.sh
src/: CMakeLists.txt
src/dk_opengl/: eglwrapper.cpp  eglwrapper.hpp  windowx11.cpp  windowx11.hpp
src/dk_utils/: exceptions.cpp  exceptions.hpp  logger.cpp  logger.hpp  noncopyable.hpp  observer.hpp
tests/: CMakeLists.txt  test_eglwrapper.cpp  test_exception.cpp  test_logger.cpp  test_observer.cpp  test_windowx11.cpp
